@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView android:id="@+id/ScrollView01"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_height="fill_parent" android:layout_width="fill_parent">
+	android:layout_height="fill_parent" android:layout_width="fill_parent"
+	android:paddingRight="5dp">
 	<LinearLayout android:orientation="vertical"
 		android:layout_width="fill_parent" android:layout_height="fill_parent"
 		android:padding="5dp" android:scrollbars="vertical">
@@ -26,7 +27,8 @@
 					android:layout_height="wrap_content" android:paddingRight="5dp"
 					android:textSize="18sp" android:id="@+id/labelCurrentProfile"
 					android:text="@+string/labelCurrentProfile"></TextView>
-				<Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/spProfiles"></Spinner>
+				<Spinner android:layout_height="wrap_content"
+					android:layout_width="wrap_content" android:id="@+id/spProfiles"></Spinner>
 			</TableRow>
 			<TableRow android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/TableRowBattery">
@@ -58,26 +60,29 @@
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:paddingRight="5dp" android:textSize="18sp" android:id="@+id/tvBatteryCurrent"></TextView>
 			</TableRow>
+			<TableRow android:layout_height="wrap_content"
+				android:layout_width="match_parent" android:id="@+id/tableRowGov">
+				<TextView android:paddingTop="10dp" android:textSize="20sp"
+					android:layout_width="wrap_content" android:paddingRight="5dp"
+					android:text="@string/labelCpuGov" android:id="@+id/textView1"
+					android:layout_height="wrap_content" android:layout_gravity="center_vertical"></TextView>
+				<Spinner android:layout_height="wrap_content"
+					android:layout_width="wrap_content" android:prompt="@string/spinnerPromptGov"
+					android:id="@+id/SpinnerCpuGov" android:paddingTop="10dp" android:layout_marginTop="10dp"></Spinner>
+			</TableRow>
+			<TableRow android:layout_height="wrap_content"
+				android:layout_width="match_parent" android:id="@+id/tableRow1">
+				<TextView android:layout_height="wrap_content"
+					android:text="@string/label_governor_tresholds" android:id="@+id/textView2"
+					android:layout_width="wrap_content" android:paddingRight="5dp"></TextView>
+				<TextView android:layout_width="wrap_content"
+					android:paddingRight="7dp" android:text="TextView" android:id="@+id/tvGovTreshholds"
+					android:layout_height="wrap_content"></TextView>
+			</TableRow>
 		</TableLayout>
-		<LinearLayout android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:id="@+id/llCpuGov"
-			android:orientation="vertical">
-			<TextView android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:text="@string/labelCpuGov"
-				android:paddingRight="5dp" android:textSize="20sp"
-				android:paddingTop="10dp" />
-			<Spinner android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@+id/SpinnerCpuGov"
-				android:prompt="@string/spinnerPromptGov"></Spinner>
-
-			<TextView android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:paddingRight="7dp"
-				android:id="@+id/tvGovTreshholds"></TextView>
-			<TextView android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:text="Explain Gov"
-				android:id="@+id/tvExplainGov" android:paddingTop="5dp"></TextView>
-
-		</LinearLayout>
+		<TextView android:layout_height="wrap_content"
+			android:paddingTop="5dp" android:text="Explain Gov"
+			android:layout_width="wrap_content" android:id="@+id/tvExplainGov"></TextView>
 
 
 		<TextView android:layout_width="fill_parent"
@@ -92,11 +97,10 @@
 
 				<TextView android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:paddingRight="5dp"
-					android:text="@+string/labelMax" android:id="@+id/labelCpuFreqMax"></TextView>
+					android:text="@+string/labelMax" android:id="@+id/labelCpuFreqMax" android:layout_gravity="center_vertical"></TextView>
 				<TextView android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:text="@+id/tvCpuFreqMax"
-					android:paddingRight="5dp" android:id="@+id/tvCpuFreqMax"
-					android:layout_gravity="right"></TextView>
+					android:paddingRight="5dp" android:id="@+id/tvCpuFreqMax" android:layout_gravity="center_vertical"></TextView>
 				<SeekBar android:layout_height="wrap_content"
 					android:layout_width="fill_parent" android:id="@+id/SeekBarCpuFreqMax"
 					android:layout_weight=".3" android:paddingRight="5dp"
@@ -110,11 +114,10 @@
 
 				<TextView android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:paddingRight="5dp"
-					android:text="@+string/labelMin" android:id="@+id/labelCpuFreqMin"></TextView>
+					android:text="@+string/labelMin" android:id="@+id/labelCpuFreqMin" android:layout_gravity="center_vertical"></TextView>
 				<TextView android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:paddingRight="5dp"
-					android:text="99999" android:id="@+id/tvCpuFreqMin"
-					android:layout_gravity="right"></TextView>
+					android:text="99999" android:id="@+id/tvCpuFreqMin" android:layout_gravity="center_vertical"></TextView>
 				<SeekBar android:layout_height="wrap_content"
 					android:layout_width="fill_parent" android:id="@+id/SeekBarCpuFreqMin"
 					android:layout_weight=".3" android:paddingRight="5dp"
