@@ -3,6 +3,7 @@ V
 - run script on profile switch (beta and for power users)
 - call in progress profile (non beta now)
 - pulsed service switches (non beta now)
+- manually choose a profile
 * bug fixes
 - 
 
